# Up-To-Me

./: .gitignore
backend/: README.md  pyproject.toml
backend/app/: __init__.py  admin.py  api.py  api_classes.py  appuser.py  card.py  db_connector.py  deck.py  friendship.py  game.py
backend/app/helpers/: jwt_helper.py  onesignal_helper.py  sql_query_helper.py
backend/app/passwordless_login/: passwordless_api.py  passwordless_bp.py  passwordless_client.py
backend/tests/: conftest.py  db_mock.py  friendship_test.py
frontend/: README copy.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  Navbar.js  index.css  index.tsx
frontend/src/components/: ConfirmDialog.css  ConfirmDialog.js  GameSettingsModal.css  GameSettingsModal.js  RadioButton.css  RadioButton.js  RequireAuth.jsx
frontend/src/components/Cards/: CardModal.css  CardModal.js  Cards.css  Cards.test.tsx  Cards.tsx  GameCardModal.css  GameCardModal.js
frontend/src/components/Decks/: ChooseGameDeck.css  ChooseGameDeck.tsx  Decks.css  Decks.test.tsx  Decks.tsx
frontend/src/components/GameDeck/: GameDeck.tsx
frontend/src/components/Main/: Main.css  Main.test.tsx  Main.tsx
frontend/src/context/: AuthProvider.js
frontend/src/pages/: AdminPage.css  AdminPage.jsx  FriendshipsPage.css  FriendshipsPage.jsx  GamePage.css  GamePage.tsx  LoginPage.css  LoginPage.jsx  MyGamesPage.css  MyGamesPage.jsx  PublicPage.css  PublicPage.jsx  RegisterPage.css  RegisterPage.jsx  StartGamePage.css  StartGamePage.jsx  UserPage.css  UserPage.jsx
frontend/src/services/: FastAPIClient.js  FastAPIClient.tsx  serviceWorker.js
